--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>Reove Technologies</title>
+    <title>RJTEK</title>
     <meta name="description" content="Humanized Generated Project" />
     <meta name="author" content="Humanized" />
 
