--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="author" content="Humanized" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Reove Technologies" />
+    <meta property="og:title" content="RJTEK" />
     <meta property="og:description" content="Humanized Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="Reove Technologies" />
+    <meta property="og:image" content="RJTEK" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Humanized" />
-    <meta name="twitter:image" content="Reove Technologies" />
+    <meta name="twitter:image" content="RJTEK" />
   </head>
 
   <body>
